[package]
name = "cargo-culting"
version = "0.1.0"
edition = "2021"
authors = ["Ritchie Carroll <ritchiecarroll@gmail.com>"]
description = "Cargo subcommand that adds mass-downloaded dependencies without understanding why"
license = "MIT"
repository = "https://github.com/ritchiecarroll/cargo-cult"
keywords = ["cargo", "cargo-subcommand", "humor", "easter-egg"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
readme = "README.md"

[dependencies]
rand = "0.8"
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
